fix dashboard custom scrollbar primary color

--- a/src/sources/forus-platform/scss/_common/includes/helpers.scss
+++ b/src/sources/forus-platform/scss/_common/includes/helpers.scss
@@ -68,7 +68,7 @@
     }
 }
 
-@mixin webkit_scrollbar($color: --color-primary-light) {
+@mixin webkit_scrollbar($color: var(--color-primary-light)) {
     &::-webkit-scrollbar {
         width: 8px;
         height: 8px;
